--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link href="/src/index.css" rel="stylesheet">
     <title>crowdfunding-page</title>
   </head>
-  <body class="font-commissioner">
+  <body class="font-commissioner text-[14px] md:text-[16px]">
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
